/*----------------------------------------------------------------------------------------------------------------------
 * Evidence Engine: A system for managing evidence on arbitrary scientific topics.
 * Comprises an SQL database, GraphQL public API, Java app server, Java and web clients.
 * Copyright © 2024 Adrian Price. All rights reserved.
 *
 * This file is part of Evidence Engine.
 *
 * Evidence Engine is free software: you can redistribute it and/or modify it under the terms of the
 * GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * Evidence Engine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
 * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 * See the GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License along with Evidence Engine.
 * If not, see <https://www.gnu.org/licenses/>. 
 *--------------------------------------------------------------------------------------------------------------------*/

plugins {
	id 'java'
	id 'org.springframework.boot' version "${springBootVersion}"
	id 'io.spring.dependency-management' version "${dependencyManagementPluginVersion}"
	// id "com.graphql-java-generator.graphql-gradle-plugin3" version "${graphQLPluginVersion}"
}

group = 'io.github.demonfiddler.evidence-engine'
version = '0.0.1-SNAPSHOT'

dependencies {
	implementation project(':common')
	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation "org.springframework.boot:spring-boot-starter-websocket"  // used for subscriptions
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-jersey'
	implementation 'org.springframework.session:spring-session-core'
	implementation "com.graphql-java-generator:graphql-java-client-runtime:${graphQLPluginVersion}"
	implementation 'com.graphql-java:graphql-java-extended-scalars:22.0'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-webtestclient'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework:spring-webflux'
	testImplementation 'org.springframework.graphql:spring-graphql-test'
	testImplementation 'org.junit.platform:junit-platform-suite'
	testImplementation 'com.google.truth:truth:1.4.4'
	// testImplementation 'org.hamcrest:hamcrest:3.0'
	// testImplementation 'org.assertj:assertj-core:3.26.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
}

repositories {
	mavenLocal()
	mavenCentral()
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
	sourceCompatibility = JavaVersion.VERSION_21
}

compileJava {
    options.compilerArgs.add('-g')
    options.compilerArgs.add('-parameters')
}

ext {
	set('snippetsDir', file('build/generated-snippets'))
	// set('springBootAdminVersion', '3.3.4')
}

tasks.named('test') {
	dependsOn project(':server').tasks.named('bootIntegrationTestServerBG')
	outputs.dir snippetsDir
	useJUnitPlatform()
	systemProperty('junit.jupiter.testclass.order.default', 'org.junit.jupiter.api.ClassOrderer$OrderAnnotation')
	finalizedBy project(':server').tasks.named('terminateIntegrationTestServer')
}

// Uncomment to enable GraphQL client code generation (NOTE: the generated code has been heavily modified).
// N.B. when enabling this line, also enable the com.graphql-java-generator.graphql-gradle-plugin3 plugin and disable
// the 'test' task's dependsOn and finalizedBy settings.
// apply from: 'codegen.gradle'
